fix product spec too long can't save and update product list view style

--- a/webroot/css/layout_3g.css
+++ b/webroot/css/layout_3g.css
@@ -293,15 +293,23 @@ ul li{ list-style:none;}
 .classlist_good ul li{float:left; width:50%; text-align:center; margin-top:0.8em;}
 .classlist_good ul li.last { border-right: none;}
 .classlist_good ul li img{text-align:center; width:100%;}
-.classlist_good ul li .brand_name, .classlist_good ul li .item_name{ font-size:0.8em; color:#666666; text-align:left; font-weight:normal; padding:0.4em 0.8em 0 0.8em;}
+.classlist_good ul li .brand_name, .classlist_good ul li .item_name {
+    color: #666666;
+    text-align: left;
+    font-weight: normal;
+    padding: 0.4em 0.5em 0 0.5em;
+}
 .classlist_good ul li .item_name{font-size:1em; padding-top:0.1em;}
 .classlist_good ul li .item_name span{ font-size:0.6em; padding:0.1em 0.2em; background-color:#29ac0e; color:#ffffff;}
-.classlist_good ul li dl{padding:0.1em 0.8em 0.6em 0.8em; background-color:#ffffff;}
+.classlist_good ul li dl {
+    padding: 0.1em 0.5em 0.6em 0.5em;
+    background-color: #ffffff;
+}
 .classlist_good ul li dl dt{ float:left;}
 .classlist_good ul li dl dt img{ width:2.25em; height:2.3em;}
 .classlist_good ul li .brand_name{ font-size:0.85em; color:#999999; font-weight:normal; display: block}
 .classlist_good ul li .listprice{font-size:0.75em; color:#ff9000; font-weight:normal; display:block; text-align:left; padding-left:0.5em;}
-.classlist_good ul li .brand_name{ padding-left:0.4em; padding-top:0.1em;}
+.classlist_good ul li .brand_name{padding-top:0.1em;}
 .classlist_good ul li .listprice .original{ font-size: 1em; color:#999999; text-decoration:line-through;}
 .classlist_good ul li .listprice span{ color:#ff9000; font-size:1.25em;}
 
